<resources>
    <string name="app_name">Uploader Wonderful Samarinda</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="detail_lokasi">Detail Lokasi</string>
    <string name="unggah_foto">Unggah Foto</string>
    <string name="unggah">Unggah</string>

    <string name="place_name_checker">Nama tempat tidak boleh kosong</string>
    <string name="place_description_checker">Deskripsi tempat tidak boleh kosong</string>
    <string name="place_type_checker">Tipe tempat tidak boleh kosong</string>
    <string name="place_address_checker">Alamat tempat tidak boleh kosong</string>
    <string name="place_district_checker">Kecamatan tidak boleh kosong</string>
    <string name="alamat_tempat">Alamat Tempat</string>
    <string name="nama_kecamatan">Nama Kecamatan</string>
    <string name="tipe_tempat">Tipe Tempat</string>

    <string name="place_nature">Wisata Alam</string>
    <string name="place_culture">Wisata Budaya</string>
    <string name="place_religi">Wisata Religi</string>
    <string name="transition_name">transition from splash</string>
    <string name="tempat_favorit_mu_ada_disini">Tempat favorit mu ada disini</string>

    <string-array name="place_type_items">
        <item>Wisata Alam</item>
        <item>Wisata Budaya</item>
        <item>Wisata Religi</item>
    </string-array>

    <string-array name="place_districts_items">
        <item>Loa Janan Ilir</item>
        <item>Palaran</item>
        <item>Samarinda Ilir</item>
        <item>Samarinda Kota</item>
        <item>Samarinda Seberang</item>
        <item>Samarinda Ulu</item>
        <item>Samarinda Utara</item>
        <item>Sambutan</item>
        <item>Sungai Kunjang</item>
        <item>Sungai Pinang</item>
    </string-array>


    <string name="title_places">Feature Place</string>

</resources>