<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcfeff"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarUpload"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/spacing_small"
                    android:padding="@dimen/spacing_small"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    tools:text="Wonderful Samarinda"
                    android:textColor="@color/black"
                    android:textSize="@dimen/letter_medium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/btnLogout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/toolbar_bg"
                    android:src="@drawable/ic_baseline_call_missed_outgoing_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/rvPickPhoto"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:background="@drawable/background_upload_button">

            <ImageView
                android:id="@+id/ivPickPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btnUnggahFoto"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_icon_camera"
                android:textAllCaps="false"
                android:textColor="@color/text_button_upload"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnUnggahFoto"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:text="@string/unggah_foto"
                android:textColor="@color/color_white" />


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:fontFamily="@font/lato"
                    android:text="@string/nama_tempat"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPlaceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/et_background"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/tipe_tempat"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spPlaceType"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spinner_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/nama_kecamatan"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spPlaceDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spinner_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/alamat_tempat"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPlaceAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/et_background"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/detail_lokasi"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPlaceDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/et_background"
                    android:padding="15dp" />


                <Button
                    android:id="@+id/btnUnggah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/background_upload_button_blue"
                    android:text="@string/unggah"
                    android:textColor="@color/color_white" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>